Fix: Addition Mobile Layout 35

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1496,9 +1496,9 @@ body {
 /* ==== TABLET & MOBILE (MEDIUM-LARGE) SCREENS ==== */
 @media (max-width: 992px) {
 
-    .hide-on-mobile {
+    /*.hide-on-mobile {
         display: none !important;
-    }
+    }*/
     body {
         overflow-x: hidden; /* Prevent horizontal scrollbars caused by scaling */
     }
